--- a/code_02_XX Basic ReAct Agent in LangGraph.ipynb
+++ b/code_02_XX Basic ReAct Agent in LangGraph.ipynb
@@ -74,11 +74,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_ollama import ChatOllama\n",
+    "# from langchain_ollama import ChatOllama\n",
+    "from langchain_openai import ChatOpenAI\n",
     "# Setup the LLM for the agent\n",
     "\n",
     "# Setup the LLM\n",
-    "model = ChatOllama(model=\"llama3.2\")\n",
+    "# model = ChatOllama(model=\"llama3.2\")\n",
+    "model = ChatOpenAI(model=\"gpt-5\")\n",
+    "\n",
+    "# Setup the GPT model\n",
     "\n",
     "# Test the model\n",
     "# response = model.invoke(\"Hello, how are you?\")\n",
@@ -101,13 +105,13 @@
     "#System prompt\n",
     "system_prompt = SystemMessage(\n",
     "    \"\"\"You are a Math genius who can solve math problems. Solve the\n",
-    "    problems provided by the user, by using only tools available. \n",
+    "    problems provided by the user, by using only tools available.\n",
     "    Do not solve the problem yourself\"\"\"\n",
     ")\n",
     "\n",
     "agent_graph=create_react_agent(\n",
-    "    model=model, \n",
-    "    state_modifier=system_prompt,\n",
+    "    model=model,\n",
+    "    prompt=system_prompt,\n",
     "    tools=agent_tools)\n"
    ]
   },
@@ -175,8 +179,8 @@
    "outputs": [],
    "source": [
     "agent_graph=create_react_agent(\n",
-    "    model=model, \n",
-    "    state_modifier=system_prompt,\n",
+    "    model=model,\n",
+    "    prompt=system_prompt,\n",
     "    tools=agent_tools,\n",
     "    debug=True)\n",
     "\n",
@@ -196,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112 (3.12.3)",
+   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
