--- a/code_03_XX Product QnA Agentic chatbot.ipynb
+++ b/code_03_XX Product QnA Agentic chatbot.ipynb
@@ -15,26 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import AzureChatOpenAI\n",
-    "from langchain_openai import AzureOpenAIEmbeddings\n",
-    "import os\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "#Setup the environment variables\n",
-    "os.environ[\"AZURE_OPENAI_API_KEY\"]=\"4e4ab31800a64ae892cbb768fe28c0fc\"\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"]=\"https://agentic-ai-course-kumaran.openai.azure.com/\"\n",
     "\n",
     "#Setup the LLM\n",
-    "model = AzureChatOpenAI(\n",
-    "    azure_deployment=\"gpt-4o\" ,\n",
-    "    api_version=\"2023-03-15-preview\",\n",
-    "    model=\"gpt-4o\"\n",
-    ")\n",
+    "model = ChatOpenAI(model=\"gpt-5\")\n",
     "\n",
     "#Setup the Embedding\n",
-    "embedding = AzureOpenAIEmbeddings(\n",
-    "    model=\"text-embedding-3-large\",\n",
-    "    openai_api_version=\"2023-05-15\"\n",
-    ")"
+    "embedding = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
    ]
   },
   {
@@ -77,7 +66,7 @@
     "    \"\"\"\n",
     "    This function returns the price of a laptop, given its name as input.\n",
     "    It performs a substring match between the input name and the laptop name.\n",
-    "    If a match is found, it returns the pricxe of the laptop.\n",
+    "    If a match is found, it returns the price of the laptop.\n",
     "    If there is NO match found, it returns -1\n",
     "    \"\"\"\n",
     "\n",
@@ -93,9 +82,8 @@
     "        return match_records_df[\"Price\"].iloc[0]\n",
     "\n",
     "#Test the tool. Before running the test, comment the @tool annotation\n",
-    "#print(get_laptop_price(\"alpha\"))\n",
-    "#print(get_laptop_price(\"testing\"))\n",
-    "    "
+    "# print(get_laptop_price(\"alpha\"))\n",
+    "# print(get_laptop_price(\"testing\"))\n"
    ]
   },
   {
@@ -117,14 +105,22 @@
    "execution_count": 3,
    "id": "b17cd9a7-1af7-4b89-8719-03af6c6b8d49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(id='6cb58d59-bf0c-4242-b397-afd89a131e02', metadata={'page': 0, 'source': './data/Laptop product descriptions.pdf', 'creationdate': 'D:20241011143914', 'total_pages': 1, 'page_label': '1', 'creator': 'PyPDF', 'producer': 'PyFPDF 1.7.2 http://pyfpdf.googlecode.com/'}, page_content='Fictional Laptop Descriptions\\nAlphaBook Pro\\nThe AlphaBook Pro is a sleek ultrabook with a 12th Gen Intel i7 processor, 16GB of DDR4 RAM,\\nand a fast 1TB SSD. Ideal for professionals on the go, this laptop offers an impressive blend of\\npower and portability.\\nGammaAir X\\nGammaAir X combines an AMD Ryzen 7 processor with 32GB of DDR4 memory and a 512GB\\nNVMe SSD. Its thin and light form factor makes it perfect for users who need high performance in a\\nportable design.\\nSpectraBook S\\nDesigned for power users, SpectraBook S features an Intel Core i9 processor, 64GB RAM, and a\\nmassive 2TB SSD. This workstation-class laptop is perfect for intensive tasks like video editing and\\n3D rendering.\\nOmegaPro G17\\nOmegaPro G17 is a gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB\\nSSD. Designed for gamers, it features a 17-inch display with a high refresh rate and powerful\\ngraphics card for the best gaming experience.\\nNanoEdge Flex'), Document(id='05a0ae0c-e9b5-4b49-ab02-af82b21293db', metadata={'source': './data/Laptop product descriptions.pdf', 'page_label': '1', 'creator': 'PyPDF', 'creationdate': 'D:20241011143914', 'page': 0, 'total_pages': 1, 'producer': 'PyFPDF 1.7.2 http://pyfpdf.googlecode.com/'}, page_content=\"OmegaPro G17\\nOmegaPro G17 is a gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB\\nSSD. Designed for gamers, it features a 17-inch display with a high refresh rate and powerful\\ngraphics card for the best gaming experience.\\nNanoEdge Flex\\nNanoEdge Flex is a versatile 2-in-1 laptop with Apple's M1 Pro chip, 16GB of unified memory, and a\\n512GB SSD. It's perfect for creative professionals who need a device that can transform between a\\nlaptop and a tablet.\")]\n"
+     ]
+    }
+   ],
    "source": [
-    "__import__('pysqlite3')\n",
-    "import sys\n",
-    "sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')\n",
+    "# __import__('pysqlite3')\n",
+    "# import sys\n",
+    "# sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')\n",
     "\n",
     "from langchain.tools.retriever import create_retriever_tool\n",
-    "from langchain_chroma import Chroma \n",
+    "from langchain_chroma import Chroma\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
@@ -138,7 +134,7 @@
     "\n",
     "#Create a vector store with Chroma\n",
     "prod_feature_store = Chroma.from_documents(\n",
-    "    documents=splits, \n",
+    "    documents=splits,\n",
     "    embedding=embedding\n",
     ")\n",
     "\n",
@@ -152,7 +148,7 @@
     ")\n",
     "\n",
     "#Test the product feature store\n",
-    "#print(prod_feature_store.as_retriever().invoke(\"Tell me about the AlphaBook Pro\") )"
+    "print(prod_feature_store.as_retriever().invoke(\"Tell me about the AlphaBook Pro\") )"
    ]
   },
   {
@@ -192,7 +188,7 @@
     "product_QnA_agent=create_react_agent(\n",
     "                                model=model, #LLM to use\n",
     "                                tools=tools, #List of tools to use\n",
-    "                                state_modifier=system_prompt, #The system prompt\n",
+    "                                prompt=system_prompt, #The system prompt\n",
     "                                debug=False, #Debugging turned on if needed\n",
     "                                checkpointer=checkpointer #For conversation memory\n",
     ")\n"
@@ -213,12 +209,12 @@
       "What are the features and pricing for GammaAir?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  Get_Product_Features (call_0GuJg5VGR7Gj2U0lPyeE2RdE)\n",
-      " Call ID: call_0GuJg5VGR7Gj2U0lPyeE2RdE\n",
+      "  Get_Product_Features (call_5YGwp0CdNKyiK61p5EsUoyVu)\n",
+      " Call ID: call_5YGwp0CdNKyiK61p5EsUoyVu\n",
       "  Args:\n",
       "    query: GammaAir\n",
-      "  get_laptop_price (call_YuoqTJtKFwUwqNSga8lOAlwH)\n",
-      " Call ID: call_YuoqTJtKFwUwqNSga8lOAlwH\n",
+      "  get_laptop_price (call_zR5t5LypajAr4N683uw0HirW)\n",
+      " Call ID: call_zR5t5LypajAr4N683uw0HirW\n",
       "  Args:\n",
       "    laptop_name: GammaAir\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -227,14 +223,17 @@
       "1399\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The GammaAir X is equipped with the following features:\n",
+      "Here’s what I have for GammaAir:\n",
       "\n",
-      "- **Processor**: AMD Ryzen 7\n",
-      "- **Memory**: 32GB of DDR4 RAM\n",
-      "- **Storage**: 512GB NVMe SSD\n",
-      "- **Design**: Thin and light form factor, perfect for portability\n",
+      "- Model in catalog: GammaAir X\n",
+      "- CPU: AMD Ryzen 7\n",
+      "- Memory: 32GB DDR4\n",
+      "- Storage: 512GB NVMe SSD\n",
+      "- Design: Thin and light form factor; high performance in a portable design\n",
       "\n",
-      "The price for the GammaAir X is $1,399.\n"
+      "Price: $1,399\n",
+      "\n",
+      "If you were looking for a different GammaAir variant, let me know and I’ll check. Would you like to compare it with another model or see upgrade options?\n"
      ]
     }
    ],
@@ -280,54 +279,70 @@
      "text": [
       "----------------------------------------\n",
       "USER : Hello\n",
-      "AGENT : Hello! How can I assist you today with our range of laptops?\n",
+      "AGENT : Hello! How can I help you today? If you’re shopping for a laptop, I can recommend models, compare specs, and share current pricing.\n",
       "----------------------------------------\n",
       "USER : I am looking to buy a laptop\n",
-      "AGENT : Great! I can help you with information about our laptops, including their features and pricing. Do you have any specific requirements or models in mind?\n",
+      "AGENT : Great! I can help you find the right laptop. A few quick questions to narrow it down:\n",
+      "\n",
+      "- Budget range?\n",
+      "- Primary use (e.g., office/work, student, programming, content creation, gaming)?\n",
+      "- Preferred screen size and weight/portability needs?\n",
+      "- Battery life importance (e.g., all‑day vs. mostly plugged in)?\n",
+      "- Operating system preference (Windows, macOS, ChromeOS)?\n",
+      "- Any must‑have specs or features (RAM/storage amount, dedicated GPU, touchscreen/2‑in‑1, ports)?\n",
+      "- Do you need it urgently or is timing flexible?\n",
+      "\n",
+      "Share whatever you know, and I’ll recommend specific models and pricing.\n",
       "----------------------------------------\n",
       "USER : Give me a list of available laptop names\n",
-      "AGENT : Here is a list of available laptops:\n",
+      "AGENT : Here are the available laptop models:\n",
+      "- AlphaBook Pro\n",
+      "- GammaAir X\n",
+      "- SpectraBook S\n",
+      "- OmegaPro G17\n",
+      "- NanoEdge Flex\n",
       "\n",
-      "1. **AlphaBook Pro** - A sleek ultrabook with a 12th Gen Intel i7 processor, 16GB of DDR4 RAM, and a fast 1TB SSD. Ideal for professionals on the go.\n",
-      "\n",
-      "2. **GammaAir X** - Combines an AMD Ryzen 7 processor with 32GB of DDR4 memory and a 512GB NVMe SSD. Perfect for high performance in a portable design.\n",
-      "\n",
-      "3. **SpectraBook S** - Designed for power users, featuring an Intel Core i9 processor, 64GB RAM, and a massive 2TB SSD. Perfect for intensive tasks.\n",
-      "\n",
-      "4. **OmegaPro G17** - A gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB SSD. Designed for gamers with a high refresh rate display.\n",
-      "\n",
-      "5. **NanoEdge Flex** - (Details not provided)\n",
-      "\n",
-      "If you need more information or pricing for any of these models, feel free to ask!\n",
+      "Would you like brief summaries or pricing for any of these?\n",
       "----------------------------------------\n",
       "USER : Tell me about the features of  SpectraBook\n",
-      "AGENT : The **SpectraBook S** is designed for power users who require top-notch performance. Here are its key features:\n",
+      "AGENT : We carry the SpectraBook S. Key features:\n",
+      "- Intel Core i9 processor\n",
+      "- 64GB RAM\n",
+      "- 2TB SSD\n",
+      "- Workstation‑class performance, ideal for video editing and 3D rendering\n",
       "\n",
-      "- **Processor:** Intel Core i9\n",
-      "- **Memory:** 64GB RAM\n",
-      "- **Storage:** Massive 2TB SSD \n",
-      "\n",
-      "This workstation-class laptop is perfect for intensive tasks such as video editing and 3D rendering. If you have any more questions or need further details, feel free to ask!\n",
+      "Is this the model you meant? Would you like the current price or a comparison with other options?\n",
       "----------------------------------------\n",
       "USER : How much does it cost?\n",
-      "AGENT : The **SpectraBook S** is priced at $2,499. If you have any more questions or need assistance with anything else, feel free to ask!\n",
+      "AGENT : The SpectraBook S is priced at $2,499. Would you like me to check availability or suggest lower-cost alternatives with similar performance?\n",
       "----------------------------------------\n",
       "USER : Give me similar information about OmegaPro\n",
-      "AGENT : The **OmegaPro G17** is a gaming powerhouse designed specifically for gamers. Here are its key features:\n",
+      "AGENT : Here’s the OmegaPro G17:\n",
       "\n",
-      "- **Processor:** Ryzen 9 5900HX CPU\n",
-      "- **Memory:** 32GB RAM\n",
-      "- **Storage:** 1TB SSD\n",
-      "- **Display:** 17-inch with a high refresh rate\n",
-      "- **Graphics:** Powerful graphics card for the best gaming experience\n",
+      "- Price: $2,199\n",
+      "- CPU: AMD Ryzen 9 5900HX\n",
+      "- Memory: 32GB RAM\n",
+      "- Storage: 1TB SSD\n",
+      "- Display: 17-inch, high refresh rate\n",
+      "- Graphics: Powerful dedicated GPU (optimized for gaming)\n",
+      "- Ideal for: Gaming and high-performance tasks\n",
       "\n",
-      "The price of the OmegaPro G17 is $2,199. If you have any more questions or need further assistance, feel free to ask!\n",
+      "Want a quick comparison between the OmegaPro G17 and the SpectraBook S to see which fits your needs better?\n",
       "----------------------------------------\n",
       "USER : What info do you have on AcmeRight ?\n",
-      "AGENT : It appears that I don't have any information on a laptop named \"AcmeRight.\" If you have any other questions or need information on different models, please let me know!\n",
+      "AGENT : I couldn’t find any laptop named “AcmeRight” in our catalog.\n",
+      "\n",
+      "Current models we carry:\n",
+      "- AlphaBook Pro\n",
+      "- GammaAir X\n",
+      "- SpectraBook S\n",
+      "- OmegaPro G17\n",
+      "- NanoEdge Flex\n",
+      "\n",
+      "If you’re looking for a specific type (e.g., gaming, ultrabook, 2‑in‑1) or spec set, tell me what you need and I’ll recommend the closest match. Or, if “AcmeRight” was a different name, please clarify.\n",
       "----------------------------------------\n",
       "USER : Thanks for the help\n",
-      "AGENT : You're welcome! If you have any more questions or need assistance in the future, feel free to reach out. Have a great day!\n"
+      "AGENT : You’re welcome! If you’d like, I can check stock and promos, or compare models side by side. Just tell me your budget and what you’ll use the laptop for.\n"
      ]
     }
    ],
@@ -356,8 +371,7 @@
     "    #Get response from the agent\n",
     "    ai_response = product_QnA_agent.invoke(user_message,config=config)\n",
     "    #Print the response\n",
-    "    print(f\"AGENT : {ai_response['messages'][-1].content}\")\n",
-    "    "
+    "    print(f\"AGENT : {ai_response['messages'][-1].content}\")\n"
    ]
   },
   {
@@ -371,19 +385,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "USER 1: The SpectraBook S is designed for power users and features:\n",
+      "USER 1: We currently carry the SpectraBook S. Here are its features:\n",
       "\n",
-      "- **Processor:** Intel Core i9\n",
-      "- **Memory:** 64GB RAM\n",
-      "- **Storage:** 2TB SSD\n",
+      "- Processor: Intel Core i9 (workstation-class performance)\n",
+      "- Memory: 64GB RAM for heavy multitasking\n",
+      "- Storage: 2TB SSD for fast load times and large project files\n",
+      "- Use case: Designed for power users; great for video editing, 3D rendering, and other intensive workloads\n",
       "\n",
-      "This workstation-class laptop is perfect for intensive tasks like video editing and 3D rendering.\n",
+      "Did you mean the SpectraBook S? If so, I can also share pricing or compare it with other models.\n",
       "\n",
-      "USER 2: The GammaAir X laptop features an AMD Ryzen 7 processor, 32GB of DDR4 memory, and a 512GB NVMe SSD. It has a thin and light form factor, making it perfect for users who require high performance in a portable design.\n",
+      "USER 2: Here’s what we have on the GammaAir series:\n",
       "\n",
-      "USER 1: The price of the SpectraBook S is $2,499.\n",
+      "Model: GammaAir X\n",
+      "- Processor: AMD Ryzen 7\n",
+      "- Memory: 32GB DDR4\n",
+      "- Storage: 512GB NVMe SSD\n",
+      "- Design: Thin-and-light chassis\n",
+      "- Key advantage: High performance in a highly portable design\n",
       "\n",
-      "USER 2: The price of the GammaAir X laptop is $1399.\n"
+      "Did you have a specific GammaAir variant in mind, or would you like more details on the GammaAir X?\n",
+      "\n",
+      "USER 1: The SpectraBook S is priced at $2,499. Would you like to check availability or compare it with similar models?\n",
+      "\n",
+      "USER 2: GammaAir X is priced at $1,399. Would you like to add it to your cart or compare it with another model?\n"
      ]
     }
    ],
@@ -417,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112",
    "language": "python",
    "name": "python3"
   },
@@ -431,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
