--- a/code_03_XX Product QnA Agentic chatbot.ipynb
+++ b/code_03_XX Product QnA Agentic chatbot.ipynb
@@ -17,10 +17,11 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_openai import OpenAIEmbeddings\n",
-    "\n",
+    "from langchain_ollama import ChatOllama\n",
     "\n",
     "#Setup the LLM\n",
-    "model = ChatOpenAI(model=\"gpt-5\")\n",
+    "model = ChatOllama(model=\"llama3.2\")\n",
+    "# model = ChatOpenAI(model=\"gpt-5\")\n",
     "\n",
     "#Setup the Embedding\n",
     "embedding = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
