--- a/code_02_XX Basic ReAct Agent in LangGraph.ipynb
+++ b/code_02_XX Basic ReAct Agent in LangGraph.ipynb
@@ -1,28 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a176bf0-e8e3-4598-a949-003b0fc6b8af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Install all dependency packages for the course\n",
-    "#Remember to execute this before running any of the exercises\n",
-    "!uv pip install tenacity==9.0.0\n",
-    "!uv pip install langchain==0.3.12\n",
-    "!uv pip install langchain-openai==0.2.12\n",
-    "!uv pip install langchain_community==0.3.12\n",
-    "!uv pip install langgraph==0.2.59\n",
-    "!uv pip install pysqlite3-binary==0.5.4\n",
-    "!uv pip install langchain_chroma==0.1.4\n",
-    "!uv pip install pandas==2.2.3\n",
-    "!uv pip install pypdf==5.1.0\n",
-    "!uv pip install nbformat==5.10.4\n",
-    "!uv pip install langchain-ollama==0.5.4"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "921a9354-af14-4403-b89d-244f74534c91",
    "metadata": {},
@@ -32,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42b44c4e-f2d1-4aec-b14c-4653407345b2",
    "metadata": {},
    "outputs": [],
@@ -69,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3e019404-dc11-4e10-93cd-94ac6a9d2f62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from langchain_ollama import ChatOllama\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_ollama import ChatOllama\n",
+    "# from langchain_openai import ChatOpenAI\n",
     "# Setup the LLM for the agent\n",
     "\n",
     "# Setup the LLM\n",
-    "# model = ChatOllama(model=\"llama3.2\")\n",
-    "model = ChatOpenAI(model=\"gpt-5\")\n",
+    "model = ChatOllama(model=\"llama3.2\")\n",
+    "# model = ChatOpenAI(model=\"gpt-5\")\n",
     "\n",
     "# Setup the GPT model\n",
     "\n",
@@ -91,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0922ce3f-5e29-459e-a86f-26c4022491e2",
    "metadata": {},
    "outputs": [],
@@ -125,10 +103,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7e000857-80ba-49fe-82d3-89993b63ebf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent returned : The sum of 2 and 3 is 5. \n",
+      "\n",
+      "Step by Step execution : \n",
+      "================================ Human Message =================================\n",
+      "\n",
+      "what is the sum of 2 and 3 ?\n",
+      "================================== Ai Message ==================================\n",
+      "Tool Calls:\n",
+      "  find_sum (a5a11c6e-e04e-4a44-8c1a-79e5a0712ef9)\n",
+      " Call ID: a5a11c6e-e04e-4a44-8c1a-79e5a0712ef9\n",
+      "  Args:\n",
+      "    x: 2\n",
+      "    y: 3\n",
+      "================================= Tool Message =================================\n",
+      "Name: find_sum\n",
+      "\n",
+      "5\n",
+      "================================== Ai Message ==================================\n",
+      "\n",
+      "The sum of 2 and 3 is 5.\n"
+     ]
+    }
+   ],
    "source": [
     "#Example 1\n",
     "inputs = {\"messages\":[(\"user\",\"what is the sum of 2 and 3 ?\")]}\n",
@@ -145,15 +150,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eda8502f-7ba9-44ba-a19c-5720871a3c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'messages': [HumanMessage(content='What is 3 multipled by 2 and 5 + 1 ?', additional_kwargs={}, response_metadata={}, id='3054e863-6b5c-4db4-a1a3-9f605d0c3c3a'),\n",
+      "              AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2025-09-18T14:38:29.621937Z', 'done': True, 'done_reason': 'stop', 'total_duration': 1244868334, 'load_duration': 67941875, 'prompt_eval_count': 309, 'prompt_eval_duration': 727727125, 'eval_count': 23, 'eval_duration': 446425541, 'model_name': 'llama3.2'}, id='run--b488ce0b-2518-4915-a9d4-4260a385f6c9-0', tool_calls=[{'name': 'find_product', 'args': {'x': '3', 'y': '7'}, 'id': '827c6854-983d-42c0-8678-0b46398d6afe', 'type': 'tool_call'}], usage_metadata={'input_tokens': 309, 'output_tokens': 23, 'total_tokens': 332}),\n",
+      "              ToolMessage(content='21', name='find_product', id='a05a44cf-5a47-4381-8b9a-b10616f61831', tool_call_id='827c6854-983d-42c0-8678-0b46398d6afe'),\n",
+      "              AIMessage(content='The product of 3 and 2 is 6.\\nThe sum of 5 and 1 is 6.\\nSo, the final answer is: 6 + 6 = 12.', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2025-09-18T14:38:30.653108Z', 'done': True, 'done_reason': 'stop', 'total_duration': 1017225917, 'load_duration': 53863500, 'prompt_eval_count': 138, 'prompt_eval_duration': 149736500, 'eval_count': 41, 'eval_duration': 811321208, 'model_name': 'llama3.2'}, id='run--2241f032-c3b7-4b9b-a6e1-9ce20b7eef05-0', usage_metadata={'input_tokens': 138, 'output_tokens': 41, 'total_tokens': 179})]}\n",
+      "Agent returned : The product of 3 and 2 is 6.\n",
+      "The sum of 5 and 1 is 6.\n",
+      "So, the final answer is: 6 + 6 = 12. \n",
+      "\n",
+      "Step by Step execution : \n",
+      "================================ Human Message =================================\n",
+      "\n",
+      "What is 3 multipled by 2 and 5 + 1 ?\n",
+      "================================== Ai Message ==================================\n",
+      "Tool Calls:\n",
+      "  find_product (827c6854-983d-42c0-8678-0b46398d6afe)\n",
+      " Call ID: 827c6854-983d-42c0-8678-0b46398d6afe\n",
+      "  Args:\n",
+      "    x: 3\n",
+      "    y: 7\n",
+      "================================= Tool Message =================================\n",
+      "Name: find_product\n",
+      "\n",
+      "21\n",
+      "================================== Ai Message ==================================\n",
+      "\n",
+      "The product of 3 and 2 is 6.\n",
+      "The sum of 5 and 1 is 6.\n",
+      "So, the final answer is: 6 + 6 = 12.\n"
+     ]
+    }
+   ],
    "source": [
+    "from pprint import pprint\n",
+    "\n",
     "#Example 2\n",
     "inputs = {\"messages\":[(\"user\",\"What is 3 multipled by 2 and 5 + 1 ?\")]}\n",
     "\n",
     "result = agent_graph.invoke(inputs)\n",
+    "pprint(result)\n",
     "\n",
     "#Get the final answer\n",
     "print(f\"Agent returned : {result['messages'][-1].content} \\n\")\n",
@@ -200,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112",
+   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112 (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
