`create_react_agent` experiment

--- a/code_04_XX Orders Chatbot with custom agent.ipynb
+++ b/code_04_XX Orders Chatbot with custom agent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3e819230-ef2c-45d0-96a5-0d9b7bcfba86",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ffac048d-b578-42b9-a420-f03b03dc0aa9",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a6caa5ac-ae0c-495e-bc0a-f0846f22f6b9",
    "metadata": {},
    "outputs": [],
@@ -112,10 +112,10 @@
     "        return -1\n",
     "    else:\n",
     "        product_orders_df.loc[\n",
-    "            product_orders_df[\"Order ID\"] == order_id, \n",
+    "            product_orders_df[\"Order ID\"] == order_id,\n",
     "                \"Quantity Ordered\"] = new_quantity\n",
     "        return True\n",
-    "        \n",
+    "\n",
     "#Test the tool. Before running the test, comment the @tool annotation\n",
     "#print(get_order_details(\"ORD-6948\"))\n",
     "#print(update_quantity(\"ORD-6948\", 1))\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a14d7334-8b93-4e9a-8995-1a369038823e",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
     "\n",
     "    #Setup the agent graph, tools and memory\n",
     "    def __init__(self, model, tools, system_prompt, debug):\n",
-    "        \n",
+    "\n",
     "        self.system_prompt=system_prompt\n",
     "        self.debug=debug\n",
     "\n",
@@ -195,28 +195,28 @@
     "        self.tools = { tool.name : tool for tool in tools }\n",
     "        if self.debug:\n",
     "            print(\"\\nTools loaded :\", self.tools)\n",
-    "            \n",
+    "\n",
     "        #attach tools to model\n",
     "        self.model=model.bind_tools(tools)\n",
     "\n",
     "\n",
     "    #Call the LLM with the messages to get next action/result\n",
     "    def call_llm(self, state:OrdersAgentState):\n",
-    "        \n",
+    "\n",
     "        messages=state[\"messages\"]\n",
     "\n",
     "        #If system prompt exists, add to messages in the front\n",
     "        if self.system_prompt:\n",
     "            messages = [SystemMessage(content=self.system_prompt)] + messages\n",
-    "            \n",
+    "\n",
     "        #invoke the model with the message history\n",
     "        result = self.model.invoke(messages)\n",
     "        if self.debug:\n",
     "            print(f\"\\nLLM Returned : {result}\")\n",
     "        #Return the LLM output\n",
     "        return { \"messages\":[result] }\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    #Check if the next action is a tool call.\n",
     "    def is_tool_call(self, state:OrdersAgentState):\n",
     "        last_message = state[\"messages\"][-1]\n",
@@ -244,8 +244,8 @@
     "                result=self.tools[tool[\"name\"]].invoke(tool[\"args\"])\n",
     "\n",
     "            #append results to the list of tool results\n",
-    "            results.append(ToolMessage(tool_call_id=tool['id'], \n",
-    "                                       name=tool['name'], \n",
+    "            results.append(ToolMessage(tool_call_id=tool['id'],\n",
+    "                                       name=tool['name'],\n",
     "                                       content=str(result)))\n",
     "\n",
     "            if self.debug:\n",
@@ -265,14 +265,13 @@
     "    \"\"\"\n",
     "\n",
     "#Create the custom orders agent\n",
-    "orders_agent = OrdersAgent(model, \n",
-    "                           [get_order_details, update_quantity], \n",
+    "orders_agent = OrdersAgent(model,\n",
+    "                           [get_order_details, update_quantity],\n",
     "                           system_prompt,\n",
-    "                           debug=False)\n",
+    "                           debug=True)\n",
     "\n",
     "#Visualize the Agent\n",
-    "Image(orders_agent.agent_graph.get_graph().draw_mermaid_png())\n",
-    "        "
+    "Image(orders_agent.agent_graph.get_graph().draw_mermaid_png())\n"
    ]
   },
   {
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c422b70e-f9ac-4810-85b0-9824af315739",
    "metadata": {},
    "outputs": [
