--- a/try-agent.ipynb
+++ b/try-agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2dc46739",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5f6def1f",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "text": [
       "\n",
       "LLM Returned :\n",
-      "AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2025-09-18T14:35:54.197569Z', 'done': True, 'done_reason': 'stop', 'total_duration': 703283583, 'load_duration': 64405875, 'prompt_eval_count': 202, 'prompt_eval_duration': 199265708, 'eval_count': 23, 'eval_duration': 438264834, 'model_name': 'llama3.2'}, id='run--6c892cf0-00d3-45ec-8cd4-45fcb5a64797-0', tool_calls=[{'name': 'find_sum', 'args': {'x': '12', 'y': '20'}, 'id': '45634cfd-8e7f-4a38-a7a6-991871d88dff', 'type': 'tool_call'}], usage_metadata={'input_tokens': 202, 'output_tokens': 23, 'total_tokens': 225})\n",
+      "AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2025-09-19T02:08:18.946145Z', 'done': True, 'done_reason': 'stop', 'total_duration': 3151102125, 'load_duration': 2205515125, 'prompt_eval_count': 202, 'prompt_eval_duration': 537131625, 'eval_count': 23, 'eval_duration': 406325292, 'model_name': 'llama3.2'}, id='run--90499252-a17a-4118-a989-2ee87e5afcf1-0', tool_calls=[{'name': 'find_sum', 'args': {'x': '12', 'y': '20'}, 'id': '47ee6d89-7711-4614-9422-2c7596b9b23c', 'type': 'tool_call'}], usage_metadata={'input_tokens': 202, 'output_tokens': 23, 'total_tokens': 225})\n",
       "\n",
       "AGENT : \n"
      ]
@@ -116,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112 (3.12.3)",
+   "display_name": "build-ai-agents-and-chatbots-with-langgraph-2021112",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
